update chnking tech

--- a/all-rag-techniques/2_semantic_chunking.ipynb
+++ b/all-rag-techniques/2_semantic_chunking.ipynb
@@ -8,83 +8,16 @@
     }
    },
    "source": [
-    "# Semantic Chunking for Document Processing\n",
+    "## Introduction to Semantic Chunking\n",
+    "Text chunking is an essential step in Retrieval-Augmented Generation (RAG), where large text bodies are divided into meaningful segments to improve retrieval accuracy.\n",
+    "Unlike fixed-length chunking, semantic chunking splits text based on the content similarity between sentences.\n",
     "\n",
-    "## Overview\n",
+    "### Breakpoint Methods:\n",
+    "- **Percentile**: Finds the Xth percentile of all similarity differences and splits chunks where the drop is greater than this value.\n",
+    "- **Standard Deviation**: Splits where similarity drops more than X standard deviations below the mean.\n",
+    "- **Interquartile Range (IQR)**: Uses the interquartile distance (Q3 - Q1) to determine split points.\n",
     "\n",
-    "This code implements a semantic chunking approach for processing and retrieving information from PDF documents, [first proposed by Greg Kamradt](https://youtu.be/8OJC21T2SL4?t=1933) and subsequently [implemented in LangChain](https://python.langchain.com/docs/how_to/semantic-chunker/). Unlike traditional methods that split text based on fixed character or word counts, semantic chunking aims to create more meaningful and context-aware text segments.\n",
-    "\n",
-    "## Motivation\n",
-    "\n",
-    "Traditional text splitting methods often break documents at arbitrary points, potentially disrupting the flow of information and context. Semantic chunking addresses this issue by attempting to split text at more natural breakpoints, preserving semantic coherence within each chunk.\n",
-    "\n",
-    "## Key Components\n",
-    "\n",
-    "1. PDF processing and text extraction\n",
-    "2. Semantic chunking using LangChain's SemanticChunker\n",
-    "3. Vector store creation using FAISS and OpenAI embeddings\n",
-    "4. Retriever setup for querying the processed documents\n",
-    "\n",
-    "## Method Details\n",
-    "\n",
-    "### Document Preprocessing\n",
-    "\n",
-    "1. The PDF is read and converted to a string using a custom `read_pdf_to_string` function.\n",
-    "\n",
-    "### Semantic Chunking\n",
-    "\n",
-    "1. Utilizes LangChain's `SemanticChunker` with OpenAI embeddings.\n",
-    "2. Three breakpoint types are available:\n",
-    "   - 'percentile': Splits at differences greater than the X percentile.\n",
-    "   - 'standard_deviation': Splits at differences greater than X standard deviations.\n",
-    "   - 'interquartile': Uses the interquartile distance to determine split points.\n",
-    "3. In this implementation, the 'percentile' method is used with a threshold of 90.\n",
-    "\n",
-    "### Vector Store Creation\n",
-    "\n",
-    "1. OpenAI embeddings are used to create vector representations of the semantic chunks.\n",
-    "2. A FAISS vector store is created from these embeddings for efficient similarity search.\n",
-    "\n",
-    "### Retriever Setup\n",
-    "\n",
-    "1. A retriever is configured to fetch the top 2 most relevant chunks for a given query.\n",
-    "\n",
-    "## Key Features\n",
-    "\n",
-    "1. Context-Aware Splitting: Attempts to maintain semantic coherence within chunks.\n",
-    "2. Flexible Configuration: Allows for different breakpoint types and thresholds.\n",
-    "3. Integration with Advanced NLP Tools: Uses OpenAI embeddings for both chunking and retrieval.\n",
-    "\n",
-    "## Benefits of this Approach\n",
-    "\n",
-    "1. Improved Coherence: Chunks are more likely to contain complete thoughts or ideas.\n",
-    "2. Better Retrieval Relevance: By preserving context, retrieval accuracy may be enhanced.\n",
-    "3. Adaptability: The chunking method can be adjusted based on the nature of the documents and retrieval needs.\n",
-    "4. Potential for Better Understanding: LLMs or downstream tasks may perform better with more coherent text segments.\n",
-    "\n",
-    "## Implementation Details\n",
-    "\n",
-    "1. Uses OpenAI's embeddings for both the semantic chunking process and the final vector representations.\n",
-    "2. Employs FAISS for creating an efficient searchable index of the chunks.\n",
-    "3. The retriever is set up to return the top 2 most relevant chunks, which can be adjusted as needed.\n",
-    "\n",
-    "## Example Usage\n",
-    "\n",
-    "The code includes a test query: \"What is the main cause of climate change?\". This demonstrates how the semantic chunking and retrieval system can be used to find relevant information from the processed document.\n",
-    "\n",
-    "## Conclusion\n",
-    "\n",
-    "Semantic chunking represents an advanced approach to document processing for retrieval systems. By attempting to maintain semantic coherence within text segments, it has the potential to improve the quality of retrieved information and enhance the performance of downstream NLP tasks. This technique is particularly valuable for processing long, complex documents where maintaining context is crucial, such as scientific papers, legal documents, or comprehensive reports."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"text-align: center;\">\n",
-    "\n",
-    "<img src=\"./images/semantic_chunking_comparison.svg\" alt=\"Self RAG\" style=\"width:100%; height:auto;\">\n",
-    "</div>"
+    "This notebook implements semantic chunking **using the percentile method** and evaluates its performance on a sample text."
    ]
   },
   {
@@ -97,11 +30,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fitz\n",
+    "!curl https://ollama.ai/install.sh | sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ollama_model_id = \"gemma2:9b-instruct-q5_0\"\n",
+    "# !pkill -f ollama\n",
+    "!nohup bash -c \"OLLAMA_HOST=0.0.0.0:11434 OLLAMA_ORIGIN=* ollama serve\" &\n",
+    "!sleep 5 && tail /content/nohup.out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ollama pull {ollama_model_id}\n",
+    "!nohup bash -c \"OLLAMA_HOST=0.0.0.0:11434 OLLAMA_ORIGIN=* ollama run {ollama_model_id}\"  &\n",
+    "!sleep 5 && tail /content/nohup.out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install langchain==0.1.20 PyMuPDF==1.24.3 openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import PyMuPDFLoader\n",
     "import os\n",
     "import numpy as np\n",
     "import json\n",
@@ -118,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,13 +121,12 @@
     "    str: Extracted text from the PDF.\n",
     "    \"\"\"\n",
     "    # Open the PDF file\n",
-    "    mypdf = fitz.open(pdf_path)\n",
-    "    all_text = \"\"  # Initialize an empty string to store the extracted text\n",
-    "    \n",
-    "    # Iterate through each page in the PDF\n",
-    "    for page in mypdf:\n",
-    "        # Extract text from the current page and add spacing\n",
-    "        all_text += page.get_text(\"text\") + \" \"\n",
+    "    mypdf = PyMuPDFLoader(pdf_path)\n",
+    "    loader = mypdf.load()\n",
+    "    all_text = \"\"\n",
+    "    for page in loader:\n",
+    "        all_text += page.page_content\n",
+    "\n",
     "\n",
     "    # Return the extracted text, stripped of leading/trailing whitespace\n",
     "    return all_text.strip()\n",
